<resources>
    <string name="app_name">FireBaseDemo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_user_sign_up">New user? <u>Sign up</u></string>
    <string name="don_t_let_them_fool_you_nbe_self_aware">Don\'t let them fool you\nBe Self Aware</string>
    <string name="be_selfish">Be Selfish!</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="already_registered_sign_in">Already registered? <u>Sign in</u></string>
    <string name="create_password">Create password</string>
    <string name="anonymous">Anonymous</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_message">Send Message</string>
    <string name="edit">Edit</string>

    <string name="chat_item_text_format">%1$s            </string>
    <string name="db_drop">DROP TABLE IF EXISTS</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Chats</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="blank_chat_bubble_when_error">blank</string>
    <string name="when_last_message_was_photo">Photo</string>
    <string name="phone_number">phone number</string>
    <string name="continue_with_phone">Continue</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="app_name_will_send_an_sms_message_to_verify_your_phone_number">%1s will send an SMS message to verify your phone number.</string>
    <string name="carrier_sms_charges_may_apply">Carrier SMS charges may apply</string>
    <string name="sure_to_send_an_sms">We will be verifying the phone number:<![CDATA[<br><b>%1$s</b><br>]]>Is this OK, or would you like to change the number?</string>
    <string name="enter_otp_sent_to_phone_no">Enter otp sent to:<![CDATA[<br><b>%1$s</b>]]></string>
    <string name="couldn_t_retrieve_the_phone_no">Couldn\'t retrieve the phone no</string>
    <string name="verify">Verify</string>
    <string name="go_back">Go back</string>
    <string name="fill_up_the_code">Fill up the code!</string>
    <string name="wrong_otp_error_message">Wrong OTP. Please enter the correct on from SMS</string>
    <string name="resend">Resend</string>
    <string name="profile_info">Profile info</string>
    <string name="please_provide_your_name_and_an_optional_profile_photo">Please provide your name and an optional profile photo</string>
    <string name="type_your_name_here">Type your name here</string>
    <string name="pick_emoji">Pick emoji</string>
    <string name="profile_photo">Profile photo</string>
    <string name="next">Next</string>
    <string name="select_contact">Select Contact</string>
    <string name="search">Search</string>
    <string name="contacts">Contacts</string>
    <string name="refresh">Refresh</string>
    <string name="type_to_search">Type to search…</string>
    <string name="bio_available">Available</string>
</resources>