<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.FireBaseDemo.NoActionBar"
    tools:context=".MessagesActivity"
    tools:ignore="RtlHardcoded">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarChat"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <RelativeLayout
            android:id="@+id/rlToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:id="@+id/llToolbarBackPress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:animateLayoutChanges="true"
                android:background="@drawable/ripple_borderless_rounded_rectangle"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ibBackPress"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:contentDescription="Back"
                    android:src="@drawable/ic_round_arrow_dark_llight_24" />

                <ImageView
                    android:id="@+id/ivProPic"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:contentDescription="Back"
                    android:src="@drawable/user_avatar" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llToolbarNameContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@id/llToolbarBackPress"
                android:animateLayoutChanges="true"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvToolbarName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anonymous"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvToolbarSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="typing..."
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textSize="12sp" />

            </LinearLayout>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvConversation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llCreateMessage"
        android:layout_below="@id/toolbarChat"
        tools:listitem="@layout/chat_message_item_you"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/ivTest"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/chat_bubble_corner_me_vector"/>

    <LinearLayout
        android:id="@+id/llCreateMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="4dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMsgText"
            style="@style/Widget.FireBaseDemo.CreateMessageTil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/emoticon_picker_button_bg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietMsgText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_a_message"
                android:inputType="textCapSentences|textMultiLine"
                android:paddingVertical="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.tangent.firebasedemo.utils.AnimButton
            android:id="@+id/animButtonSendMsg"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:background="@drawable/msg_send_button_selector_bg"
            android:contentDescription="@string/send_message"
            app:duration="100"
            app:first="@drawable/ic_round_photo_camera_24"
            app:second="@drawable/ic_round_send_shifted_right_24" />
    </LinearLayout>
</RelativeLayout>